Code cleanup.
Utils.java, SetupUtils.java:
Renamed isPriviledgedPort() to isPrivilegedPort().